--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "build": "graph build",
     "prepare:matic": "mustache config/matic.json subgraph.template.yaml > subgraph.yaml",
     "prepare:mumbai": "mustache config/mumbai.json subgraph.template.yaml > subgraph.yaml",
-    "deploy:matic": "yarn prepare:matic && yarn deploy",
-    "deploy:mumbai": "yarn prepare:mumbai && yarn deploy",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ JoaoCampos89/kittygotchi",
+    "deploy:matic": "yarn prepare:matic && yarn deploy:graph",
+    "deploy:mumbai": "yarn prepare:mumbai && yarn deploy:graph:mumbai",
+    "deploy:graph": "graph deploy --node https://api.thegraph.com/deploy/ JoaoCampos89/kittygotchi",
+    "deploy:graph:mumbai": "graph deploy --node https://api.thegraph.com/deploy/ JoaoCampos89/kittygotchimumbai",
     "create-local": "graph create --node http://localhost:8020/ JoaoCampos89/kittygotchi",
     "remove-local": "graph remove --node http://localhost:8020/ JoaoCampos89/kittygotchi",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 JoaoCampos89/kittygotchi"
