--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,9 +4,9 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: KittyGotchi
-    network: mumbai
+    network: matic
     source:
-      address: '0xbdd0C521aBb19fA863917e2C807f327957D239ff'
+      address: '0xEA88540adb1664999524d1a698cb84F6C922D2A1'
       abi: KittyGotchi
       startBlock: 19971925
     mapping:
